--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^5.9.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-masonry-layout": "^1.0.6",
     "react-navigation": "^3.5.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
